# kasmctl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: agents.md  commands.md  configuration.md  images.md  servers.md  sessions.md  zones.md
packaging/: install.sh
packaging/homebrew/: README.md  kasmctl.rb
scripts/: install.sh
src/: confirm.rs  lib.rs  main.rs  resource.rs
src/api/: agents.rs  error.rs  images.rs  mod.rs  reports.rs  servers.rs  sessions.rs  zones.rs
src/cli/: config_cmd.rs  filters.rs  mod.rs
src/cli/verbs/: create.rs  delete.rs  exec.rs  get.rs  mod.rs  pause.rs  resume.rs  stop.rs  top.rs  update.rs
src/config/: mod.rs  model.rs
src/models/: agent.rs  image.rs  mod.rs  report.rs  server.rs  session.rs  zone.rs
src/output/: display.rs  json.rs  mod.rs  table.rs  yaml.rs
tests/: api_client.rs  cli_parsing.rs  config.rs  models.proptest-regressions  models.rs  output_rendering.rs
tests/integration/: error_handling.rs  helpers.rs  images.rs  main.rs  session_lifecycle.rs  sessions_read.rs
