[package]
name = "kasmctl"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A command-line tool for managing Kasm Workspaces, inspired by kubectl"
repository = "https://github.com/PhilipCramer/kasmctl"
readme = "README.md"
keywords = ["kasm", "cli", "workspaces", "remote-desktop"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
comfy-table = "7"
directories = "5"

[dev-dependencies]
proptest = "1"
mockito = "1"
tempfile = "3"
