[package]
name = "kasmctl"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "A command-line tool for managing Kasm Workspaces, inspired by kubectl"
repository = "https://github.com/PhilipCramer/kasmctl"
readme = "README.md"
keywords = ["kasm", "cli", "workspaces", "remote-desktop"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
comfy-table = "7"
directories = "5"

[dev-dependencies]
proptest = "1"
mockito = "1"
tempfile = "3"

[package.metadata.deb]
maintainer = "Philip Cramer"
copyright = "2026 Philip Cramer"
license-file = ["LICENSE", "0"]
extended-description = "A command-line tool for managing Kasm Workspaces, inspired by kubectl. Supports session, image, zone, agent, and server management with multi-context configuration."
section = "utility"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/kasmctl", "usr/bin/", "755"],
    ["completions/kasmctl.bash", "usr/share/bash-completion/completions/kasmctl", "644"],
    ["completions/_kasmctl", "usr/share/zsh/vendor-completions/_kasmctl", "644"],
    ["completions/kasmctl.fish", "usr/share/fish/vendor_completions.d/kasmctl.fish", "644"],
]
